Fixed CSS layout issues

--- a/core/page/css/layout/page.less
+++ b/core/page/css/layout/page.less
@@ -31,10 +31,10 @@ danger {
 
 // active. selected_wrap
 	.active {
-		&.wrapper_component {
-			//transition: background-color 0.3s ease;
-			background-color: @color_grey_medium !important; // rgb(230, 230, 230)
-		}
+		// &.wrapper_component {
+		// 	//transition: background-color 0.3s ease;
+		// 	background-color: @color_grey_medium !important; // rgb(230, 230, 230)
+		// }
 	}
 // error
 	.error {
